✨ feat(integration): menambahkan integrasi SAQ (close #2)

--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ ipython = "*"
 python-multipart = "*"
 faker = "*"
 typing-extensions = "*"
+saq = {extras = ["hiredis"], version = "*"}
 
 [dev-packages]
 black = "*"
