🐞 fix(env): gunakan contoh domain dari pada localhost

--- a/.env.example
+++ b/.env.example
@@ -27,12 +27,12 @@ REDIS_DB=0 # required
 IPAYMU_URL=https://sandbox.ipaymu.com # required
 IPAYMU_VIRTUAL_ACCOUNT=xxx # required
 IPAYMU_API_KEY=xxx # required
-IPAYMU_CALLBACK_URL=http://localhost:5000/callback/ipaymu # required
+IPAYMU_CALLBACK_URL=http://domain.com/callback/ipaymu # required
 
 # Xendit
 XENDIT_API_KEY=xxx # required
 XENDIT_SECRET_KEY=xxx # required
-XENDIT_QRCODE_CALLBACK_URL=http://localhost:5000/callback/xendit/qr # required
+XENDIT_QRCODE_CALLBACK_URL=http://domain.com/callback/xendit/qr # required
 
 # Duitku
 DUITKU_URL=https://sandbox.duitku.com # required
