🐳 chore(deps): menambahkan modul filetype

--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ python-multipart = "*"
 faker = "*"
 typing-extensions = "*"
 saq = {extras = ["hiredis"], version = "*"}
+filetype = "*"
 
 [dev-packages]
 black = "*"
