--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ github.token }}
 
-      - name: Build and push Docker image (app)
+      - name: Build and push Docker image
         env:
           IMAGE_NAME: ${{ env.GITHUB_REGISTRY }}/${{ github.repository }}:latest
         run: |
@@ -38,7 +38,17 @@ jobs:
     needs: build
     environment: getpay-api
     steps:
-      -   uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.GITHUB_REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
+
       -   name: Deployment
           run: |
-            echo 'Hello World!'
+            docker-compose -f docker-compose.prod.yml pull app
+            docker-compose -f docker-compose.prod.yml up -d
