🐞 fix(github-action): menambahkan permission ke job deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,8 @@ jobs:
 
   deploy:
     runs-on: getpay-runner
+    permissions:
+      packages: read
     needs: build
     environment: getpay-api
     steps:
