🎈 perf(github-action): menambahkan langkah untuk membersihkan docker image yang tidak terpakai

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,5 +55,7 @@ jobs:
 
       - name: Deployment
         run: |
+          docker-compose -f docker-compose.prod.yml down
           docker-compose -f docker-compose.prod.yml pull app
           docker-compose -f docker-compose.prod.yml up -d
+          python cleanup_docker.py
