🐞 fix(docker): menambahkan env file ke q1_worker

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -36,6 +36,8 @@ services:
   q1_worker:
     restart: always
     image: ghcr.io/getpay-id/getpay-api:latest
+    env_file:
+      - .env
     depends_on:
       - redis
     environment:
