--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -15,6 +15,7 @@ services:
       - REDIS_HOST=redis
     volumes:
       - .:/space
+      - static_volume:/space/static
     command: uvicorn app.main:app --workers 2 --host "0.0.0.0" --port 5000
 
   db:
