🎈 perf(deployment): gunakan gunicorn dan uvicorn worker untuk serve app

--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,7 @@ faker = "*"
 typing-extensions = "*"
 saq = {extras = ["hiredis"], version = "*"}
 filetype = "*"
+gunicorn = "*"
 
 [dev-packages]
 black = "*"
