--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -46,7 +46,7 @@ services:
     environment:
       - MONGODB_HOST=db
       - REDIS_HOST=redis
-    command: python runworker.py app.settings.Q1_SETTINGS
+    command: python runworker.py app.queue.q1.config.Q1_SETTINGS
 
   # NginX and LetsEncrypt setup reference can be found here:
   # => https://testdriven.io/blog/dockerizing-django-with-postgres-gunicorn-and-nginx/
