--- a/Pipfile
+++ b/Pipfile
@@ -21,6 +21,7 @@ typing-extensions = "*"
 saq = {extras = ["hiredis"], version = "*"}
 filetype = "*"
 gunicorn = "*"
+slowapi = "*"
 
 [dev-packages]
 black = "*"
