🐳 chore(docker): ganti docker image bitnami/mongodb ke docker image resmi mongodb

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,15 +30,18 @@ jobs:
     container: python:${{ matrix.py }}
     services:
       db:
-        image: bitnami/mongodb
+        image: mongo
+        env:
+          MONGO_INITDB_ROOT_USERNAME: ${{ env.MONGODB_USERNAME }}
+          MONGO_INITDB_ROOT_PASSWORD: ${{ env.MONGODB_PASSWORD }}
+          MONGO_INITDB_DATABASE: ${{ env.MONGODB_DATABASE }}
+        options: >-
+          --health-cmd mongo
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
         ports:
           - 27017:27017
-        env:
-          MONGODB_ROOT_USER: root
-          MONGODB_ROOT_PASSWORD: root
-          MONGODB_USERNAME: ${{ env.MONGODB_USERNAME }}
-          MONGODB_PASSWORD: ${{ env.MONGODB_PASSWORD }}
-          MONGODB_DATABASE: ${{ env.MONGODB_DATABASE }}
 
       redis:
         image: redis
