--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -78,8 +78,8 @@ jobs:
 
         run: |
           python -c "import app.settings as settings; v = [f'{key}={getattr(settings, key)}' for key in dir(settings) if not key.startswith('__') and key.isupper()]; print('\n'.join(v))"
-      #     python3 manage.py init
-      #     python3 manage.py create_user -u ${{env.USER_EMAIL}} -p ${{env.USER_PASSWORD}} -y
+          python3 manage.py init
+          python3 manage.py create_user -u ${{env.USER_EMAIL}} -p ${{env.USER_PASSWORD}} -y
 
       # - name: Run tests
       #   run: |
