🐞 fix(settings): rubah nama REDIS_DB ke REDIS_DATABASE

--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,7 @@ REDIS_HOST=localhost # required
 REDIS_PORT=6379 # required
 REDIS_USERNAME= # optional
 REDIS_PASSWORD= # optional
-REDIS_DB=0 # required
+REDIS_DATABASE=0 # required
 
 # IPaymu
 IPAYMU_URL=https://sandbox.ipaymu.com # required
