--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,17 +21,17 @@ jobs:
           - "3.8"
 
     env:
-      REDIS_HOST: redis
+      REDIS_HOST: 127.0.0.1
       MONGODB_USERNAME: test_user
       MONGODB_PASSWORD: test123456
       MONGODB_DATABASE: test_gpdb
-      MONGODB_HOST: db
+      MONGODB_HOST: 127.0.0.1
 
     services:
       db:
         image: bitnami/mongodb
         ports:
-          - 27017/tcp
+          - 27017:27017
         env:
           MONGODB_ROOT_PASSWORD: root
           MONGODB_USERNAME: ${{ env.MONGODB_USERNAME }}
@@ -46,7 +46,7 @@ jobs:
       redis:
         image: redis
         ports:
-          - 6379/tcp
+          - 6379:6379
         options: >-
           --health-cmd "redis-cli ping"
           --health-interval 10s
