--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,43 +10,28 @@ on:
 
 jobs:
   test_job:
-    name: Run tests using python v3.9
+    name: Run tests using python v${{ matrix.py }}
     runs-on: ubuntu-latest
     environment: getpay-api
+    strategy:
+      fail-fast: false
+      matrix:
+        py:
+          - "3.9"
+          - "3.8"
+
     env:
       MONGODB_USERNAME: test_user
       MONGODB_PASSWORD: test_password
       MONGODB_DATABASE: test_database
-    services:
-      db:
-        image: bitnami/mongodb
-        ports:
-          - 27017/tcp
-        env:
-          MONGODB_ROOT_PASSWORD: root
-          MONGODB_USERNAME: ${{env.MONGODB_USERNAME}}
-          MONGODB_PASSWORD: ${{env.MONGODB_PASSWORD}}
-          MONGODB_DATABASE: ${{env.MONGODB_DATABASE}}
-        options: >-
-          --health-cmd "mongo"
-          --health-interval 15s
-          --health-timeout 5s
-          --health-retries 7
-      redis:
-        image: redis
-        ports:
-          - 6379/tcp
-        options: >-
-          --health-cmd "redis-cli ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
 
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - name: Setup python v${{ matrix.py }}
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: ${{ matrix.py }}
+
       - name: Create environment file
         run: printf '${{secrets.ENV_FILE}}' > .env
 
@@ -55,15 +40,24 @@ jobs:
         with:
           envFile: .env.testing
 
+      - name: Setup redis
+        uses: shogo82148/actions-setup-redis@v1
+        with:
+          redis-version: latest
+
+      - name: Setup MongoDB
+        uses: supercharge/mongodb-github-action@1.7.0
+        with:
+          mongodb-version: 5.0
+          mongodb-username: ${{env.MONGODB_USERNAME}}
+          mongodb-password: ${{env.MONGODB_PASSWORD}}
+          mongodb-db: ${{env.MONGODB_DATABASE}}
+
       - name: Install dependencies
         run: |
           pip install -r all-requirements.txt
 
       - name: Initialize data
-        env:
-          REDIS_PORT: ${{job.services.redis.ports[6379]}}
-          MONGODB_PORT: ${{ job.services.db.ports[27017] }}
-
         run: |
           python3 manage.py init
           python3 manage.py create_user -u ${{env.USER_EMAIL}} -p ${{env.USER_PASSWORD}} -y
