--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,7 +58,10 @@ jobs:
           pip install -r all-requirements.txt
 
       - name: Initialize data
+        env:
+          MONGODB_URL: mongodb://${{env.MONGODB_USERNAME}}:${{env.MONGODB_PASSWORD}}@localhost:27017/${{env.MONGODB_DATABASE}}
         run: |
+          python -c "import app.settings as settings; v = [f'{key}={getattr(settings, key)}' for key in dir(settings) if not key.startswith('__') and key.isupper()]; print('\n'.join(v))"
           python3 manage.py init
           python3 manage.py create_user -u ${{env.USER_EMAIL}} -p ${{env.USER_PASSWORD}} -y
 
@@ -69,6 +72,3 @@ jobs:
       - name: Cleanup Database
         run: |
           python3 manage.py drop_collection -f
-
-      - name: Cleanup docker
-        run: python3 cleanup_docker.py
