--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,7 +59,7 @@ jobs:
 
       - name: Initialize data
         env:
-          MONGODB_URL: mongodb://${{env.MONGODB_USERNAME}}:${{env.MONGODB_PASSWORD}}@localhost:27017/${{env.MONGODB_DATABASE}}
+          MONGODB_URL: mongodb://${{env.MONGODB_USERNAME}}:${{env.MONGODB_PASSWORD}}@localhost:27017/${{env.MONGODB_DATABASE}}?authSource=admin
         run: |
           python3 manage.py init
           python3 manage.py create_user -u ${{env.USER_EMAIL}} -p ${{env.USER_PASSWORD}} -y
