✨ feat(deps): menambahkan dukungan sentry (close #6)

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ DEMO=0
 # JWT
 JWT_SECRET_KEY='xxx' # required
 
+# Sentry
+SENTRY_DSN= # optional
+
 # MongoDB
 MONGODB_ROOT_USER=xxx # required for mongodb service
 MONGODB_ROOT_PASSWORD=xxx # required for mongodb service
