--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@ JWT_SECRET_KEY='xxx' # required
 # Sentry
 SENTRY_DSN= # optional
 
+# SAQ Queue
+Q1_DB=1
+
 # MongoDB
 MONGODB_ROOT_USER=xxx # required for mongodb service
 MONGODB_ROOT_PASSWORD=xxx # required for mongodb service
