--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ isolated_build = True
 description = run the tests with pytest
 deps =
     -rall-requirements.txt
-
+allowlist_externals =
+    /bin/bash
 commands =
-    pytest --cache-clear
+    bash scripts/runtests.sh
