--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
+# Getpay
 DEBUG=1
 DEMO=0
-
-# JWT
 JWT_SECRET_KEY='xxx' # required
+NOTIFICATION_URL= # optional (but, recommended)
 
 # Sentry
 SENTRY_DSN= # optional
